src/tests/fail-if-empty-predicate.err
Fatal error: exception Eqeq.Error("line 5 (char 8): ')'")
