src/tests/fail-if-empty-predicate.eq
SomeContext = {
  a={1;}
}
SomeContext: find a {
 if (  ) {
   print("%.0f\n",a);
  }
}
